# image_classifier_python_pytorch

./: index.py  pyproject.toml
data/person3/: readme.txt
